# app-cast

./: CMakeLists.txt  sparkle_macos_priv.key
doc/: appcast.xml  macappcast.xml
resource/: demo.qrc  dsa_pub.pem
resource/translation/sk.lproj/: SparkleDemo.strings
src/: app.cc  main_window.ui  mainwindow.cc  mainwindow.hpp
src/mac/: CocoaInitializer.h  CocoaInitializer.mm  SparkleAutoUpdater.h  SparkleAutoUpdater.mm
tool/: SparkleUpdateDemo.pkg
